# drone_manual_control

./: .gitignore  README.en.md  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml  simulation-test.yml
config/: action_sequences.yaml  drone_specs.yaml  optimized_drone_specs.yaml  sim_params.yaml
custom_airframes/: 4001_custom_drone  4500_my_drone.json  4501_manual_control_drone.json  rcS_custom
docker/: Dockerfile.base  Dockerfile.bridge  Dockerfile.interface  Dockerfile.manual_control  Dockerfile.msgs  Dockerfile.sim  Dockerfile.web_viz  entrypoint-bridge.sh  entrypoint-control-interface.sh  entrypoint-manual-control.sh  entrypoint-simulator.sh  entrypoint-unified.sh  entrypoint-web-viz.sh
docker/px4-simulator/: Dockerfile.px4_sitl  docker-compose.px4-sitl.yaml  docker-compose.vector.yaml  entrypoint-px4-sitl.sh
docker/rl-agent/: Dockerfile  entrypoint-rl-agent.sh
models/ground_plane_custom/: model.config  model.sdf
rosdep/: rosdep-bridge.yaml  rosdep-msgs.yaml
scripts/: auto_deploy.sh  build_all.sh  optimize_drone.sh  quick_start.sh  run_demo.sh  run_simple_demo.sh  run_tests.sh  setup_environment.sh  start_system.sh
src/angle_bridge/: package.xml  setup.py
src/angle_bridge/angle_bridge/: main.py
src/command_bridge/: package.xml  setup.py
src/command_bridge/command_bridge/: main.py
src/common/: package.xml  setup.py
src/common/common/: bridge_base.py  utils.py  utils.pyi
src/drone_msgs/: CMakeLists.txt  package.xml
src/drone_msgs/msg/: DroneControlCommand.msg  DroneState.msg
src/manual_control/: package.xml  setup.py
src/manual_control/launch/: simple_demo.launch.py
src/manual_control/manual_control/: __init__.py  action_executor.py  optimized_simulator.py  simple_simulator.py  state_monitor.py
src/manual_control/resource/: manual_control
src/outer_motor_bridge/: package.xml  setup.py
src/outer_motor_bridge/outer_motor_bridge/: main.py
src/outer_motor_bridge/resource/: outer_motor_bridge
src/px4_msgs/: CMakeLists.txt
src/px4_msgs/.github/workflows/: build.yml
src/px4_msgs/msg/: VehicleCommand.msg
src/sim_launch/: CMakeLists.txt  package.xml  setup.py
src/sim_launch/config/: sim_params.yaml
src/sim_launch/launch/: bridge_launch.py  empty_custom.sdf  gz_sim.launch.py  sim_all.launch.py
src/sim_launch/resource/: empty_custom.sdf  sim_launch
src/sim_launch/test/: test_dummy.py
src/state_bridge/: package.xml  setup.py
src/state_bridge/resource/: state_bridge
src/state_bridge/state_bridge/: state_bridge.py
tests/: ci-compose.yml  mock_messages.py  test_integration.py  test_manual_control.py  test_simple_simulation.py  test_simulation_with_mocks.py
web_viz/: index.html  server.py
