<?xml version="1.0"?>
<package format="3">
  <name>drone_msgs</name>
  <version>2.0.1</version>
  <description>Custom messages for drone control and state.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
