<?xml version="1.0"?>
<package format="3">
  <name>outer_motor_bridge</name>
  <version>2.0.1</version>
  <description>PX4 fan PWM → Gazebo joint コマンド橋渡しノード</description>
  <maintainer email="example@example.com">Hinata Koizumi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>python3-setuptools</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>drone_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 