<?xml version="1.0"?>
<package format="3">
  <name>sim_launch</name>
  <version>2.0.1</version>
  <description>Launch files to run Gazebo and bridge nodes.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <!-- テストで使うなら追加 -->
  <test_depend>launch_testing</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
